tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_85.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((((y MOD 1223) DIV (1223 MOD 200)) MOD (- (1223 + 200))) >= ((+ (z - 200)) + ((x MOD 200) * (y MOD z))));
               x := (- (((+ 1223) + (y MOD y)) DIV ((z + 0) + (x DIV 200))));
               q := ((((x * z) - (z DIV 200)) - ((0 - 1) * (1223 - 200))) < (((z MOD x) + (1 MOD x)) - ((200 * x) - (1223 + 0))));
  (* error *)  p := ((((q + 200) MOD (200 * 2)) DIV ((2 MOD 1223) DIV (+ 2))) < (((1 * 2) MOD (- 1)) - (- (+ 2))));
               r := ((((y * 0) + (1223 * 2)) - (+ (2 + 2))) >= (((1223 DIV 2) * (- 0)) DIV ((+ y) * (1223 + 0))));
               x := (((+ (z MOD 2)) DIV ((- 200) DIV (y MOD 1))) * (+ (- (z - 1223))));
               r := ((((- 200) DIV (- 1)) * ((1223 * 2) + (0 - z))) # (((z + y) DIV (- 200)) + ((0 * y) - (- 1223))));
               x := (+ (+ ((+ 200) MOD (y + y))));
               x := ((((1 - y) DIV (z MOD 2)) + ((0 MOD 200) DIV (1 * y))) - ((- (1 - z)) + ((0 MOD 1223) - (1223 DIV 0))));
               y := (- (((z * y) DIV (2 MOD y)) - ((0 MOD z) - (1 MOD 1))))
END Test14.